# fixed-type-id

./: .gitignore  Cargo.toml  LICENSE  README.md
fixed_revision/: Cargo.toml  README.md  ggg.rs
fixed_revision/src/: lib.rs
fixed_revision/tests/: basic_gen.rs  prototype.rs  rkyv_gen.rs  serde_gen.rs  smoke.rs
fixed_revision_macros/: Cargo.toml  README.md
fixed_revision_macros/src/: lib.rs
fixed_revision_macros/src/ast/: attributes.rs  mod.rs  visit.rs
fixed_revision_macros/src/expand/: common.rs  de.rs  mod.rs  reexport.rs  ser.rs  validate_version.rs
fixed_revision_macros/tests/: basic_gen.rs
fixed_type_id/: Cargo.toml
fixed_type_id/src/: lib.rs
fixed_type_id/src/remote_impl/: glam.rs  kollect.rs  macaw.rs  mod.rs  stdlib.rs  ultraviolet.rs  uuid.rs
fixed_type_id_macros/: Cargo.toml
fixed_type_id_macros/src/: fixed_type_id.rs  lib.rs
