[package]
name = "fixed-revision"
version = "0.1.0"
edition = "2021"

[dependencies]
fixed-type-id = { path = "../fixed_type_id", version = "0.1.2" }
fixed-revision-macros = { path = "../fixed_revision_macros" }
rkyv = { version = "0.8.9", optional = true }
serde = { version = "1.0.216", optional = true, features = ["derive"] }

[dev-dependencies]
serde-hjson = "1.1.0"
serde_json = "1.0.133"
toml = "0.8.19"
ron = "0.8.1"

[features]
default = ["serde", "rkyv"]
serde = ["dep:serde", "fixed-type-id/serde"]
rkyv = ["dep:rkyv", "fixed-type-id/rkyv"]
