[package]
name = "fixed-revision-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0.21"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }

[dev-dependencies]
fixed-type-id = { path = "../fixed_type_id" }
fixed-revision = { path = "../fixed_revision" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
ron = "0.8.1"
