[package]
name = "fixed-type-id"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["cupofc0t <cupofc0t@gmail.com>"]
description = "Make your types have a fixed type id&stable type name with version support between different builds."
homepage = "https://github.com/c00t/fixed-type-id"
repository = "https://github.com/c00t/fixed-type-id"
categories = []
keywords = ["typeid", "type-id", "reflection"]

[dependencies]
either = "1.13.0"
fixed-type-id-macros = { path = "../fixed_type_id_macros", version = "0.1.1" }
fixedstr-ext = { version = "0.5.8", features = ["fstr"] }
glam = { version = "0.29.2", optional = true }
kollect = { version = "0.4.1", optional = true }
macaw = { version = "0.19.1", optional = true }
rapidhash = "1.1.0"
rkyv = { version = "0.8.9", optional = true }
semver = "1.0.23"
serde = { version = "1.0.216", optional = true, features = ["derive"] }
ultraviolet = { version = "0.9.2", optional = true, features = ["f64", "int"]}

[features]
default = ["len128", "serde", "rkyv"]
len64 = []
len128 = []
len256 = []
erase_name = ["fixed-type-id-macros/erase_name"]
kollect = ["dep:kollect"]
glam = ["dep:glam"]
macaw = ["dep:macaw"]
ultraviolet = ["dep:ultraviolet"]
serde = ["dep:serde"]
rkyv = ["dep:rkyv"]
specialization = []

[dev-dependencies]
serde_json = "1.0.133"
